<resources>
    <string name="app_name">GitHubUser Search</string>
    <string name="searchbar_hint">Cari Pengguna GitHub</string>
    <string name="Followers">Followers</string>
    <string name="Following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Novriyan Ferdiyanto</string>
    <string name="email">NovriyanFerdiyanto@gmail.com</string>
    <string name="id_student">A107D4KY4250</string>
    <string name="dark_mode">Dark Theme</string>
    <string name="save_favorite">Save Favorite</string>
</resources>